tests/paczka1/fuzzy1/39541376.err
Error in line 1: Fv2EEvVgjT7 S506 10,3
Error in line 14: bPB S626 26,8
Error in line 15: bPB S506 2,0
Error in line 20: i2sS208303,0
Error in line 16: bPB S208 98,5
Error in line 12: S626 S444 66,7
Error in line 18: i2s S208 80,8
Error in line 31: bPB S444 71,2
Error in line 9: Fv2EEvVgjT7 S208 284,3
Error in line 39: bPB S506 -1,1
